Bug #41663, "Falcon assertion (deferredIndex->virtualOffset) failed at Index.cpp:264"

Don't try to chill empty deferred indexes.